Spelling error fix
'context' to 'contest'

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ img.hov:hover{
         class="img-responsive" alt="Tube Map">
     </div>
     <div class="col-xs-6" style="padding: 20px 40px 0px 40px">
-      <p class="contactfont">If you’d like me to send you through my extended portfolio I’d be all too happy to do so. If you’d like to ask me anything, nothing is to silly, nothing is to serious, feel free to drop me a line. Wither you want to ask my opinion on the new tower at 1 Blackfriars or whether or not there really are a secret group of field mice controlling the entire world or perhaps you’d like to context my assertion that Pluto is still a cherished planet despite what all those nasty scientists say. My email address is right there.</p>
+      <p class="contactfont">If you’d like me to send you through my extended portfolio I’d be all too happy to do so. If you’d like to ask me anything, nothing is to silly, nothing is to serious, feel free to drop me a line. Wither you want to ask my opinion on the new tower at 1 Blackfriars or whether or not there really are a secret group of field mice controlling the entire world or perhaps you’d like to contest my assertion that Pluto is still a cherished planet despite what all those nasty scientists say. My email address is right there.</p>
       <p class="contactfont">I live next to Finsbury Park sation, London. Shown here, lets meet up!</p>
     </div>
   </div>
