added test image

--- a/index.html
+++ b/index.html
@@ -322,5 +322,6 @@ img.hov:hover{
   <li><a href="#page3">Profile</a></li>
   <li><a href="#page4">Contact</a></li>
 </ul>
+	   <img src='img/testimage.jpg' alt='test image should appear here'>
    <body>
 </html>
