--- a/index.html
+++ b/index.html
@@ -162,7 +162,11 @@ img.hov:hover{
 
 .footerfont{
   font-size: 15pt;
-  
+}
+		  
+#testImageSmily {
+  width: 200px;
+  height: 100px;
 }
 	  </style>
    </head>
@@ -322,6 +326,6 @@ img.hov:hover{
   <li><a href="#page3">Profile</a></li>
   <li><a href="#page4">Contact</a></li>
 </ul>
-	   <img src='img/testimage.jpg' alt='test image should appear here'>
+	   <img src='img/testimage.jpg' alt='test image should appear here' id='testImageSmily'>
    <body>
 </html>
