--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ img.hov:hover{
       <div class="container-fluid" id="page1">
   <div class="row">
     <div class="col-xs-12 text-center">
-      <h1>Robert J Veitch</h1>
+      <h1>Robin J Veitch</h1>
       <p id="tagline">Product Designer ・ Student ・ Oddert</p>
       <blockquote id="blockquote1">
         <p>"That worked perfectly, exactly as we predicted. What a shame."</p>
