--- a/folios/margate/Margate_Project.html
+++ b/folios/margate/Margate_Project.html
@@ -3,7 +3,12 @@
 <html>
 
   <head>
-    <title></title>
+    <title>Margate Project</title>
+    <style>
+      .folioImg {
+        width: 100%;
+      }
+    </style>
   </head>
   
 <body>
