--- a/folios/margate/Margate_Project.html
+++ b/folios/margate/Margate_Project.html
@@ -7,6 +7,8 @@
     <style>
       .folioImg {
         width: 100%;
+        border-top: 1px solid black;
+        margin-bottom: 5px;
       }
     </style>
   </head>
