--- a/folios/folio_margate.html
+++ b/folios/folio_margate.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class='header-img-container'>
+  <div class='header-img-container margate'>
   <img src='/folios/margate/img/1.jpg' class="header-img" alt='Margate Page One' /></div>
 
 <a href='/pdfs/margate.pdf' target="_blank" class="a-pdf">
