--- a/folios/folio_margate.html
+++ b/folios/folio_margate.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>A Pen by  Robin Veitch</title>
+  <title>Robert Veitch Margate Project</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
 
