--- a/folios/folio_torch.html
+++ b/folios/folio_torch.html
@@ -15,9 +15,9 @@
 
 <body>
   <div class='header-img-container torch'>
-  <img src='/folios/margate/img/1.jpg' class="header-img" alt='Margate Page One' /></div>
+  <img src='/folios/torch/img/torch_banner.jpg' class="header-img" alt='Margate Page One' /></div>
 
-<a href='/pdfs/margate.pdf' target="_blank" class="a-pdf">
+<a href='/pdfs/Torch_Project.pdf' target="_blank" class="a-pdf">
 
   <div class="pdf-link text-center">
     <i class="fa fa-2x fa-file-pdf-o"></i>
@@ -39,8 +39,8 @@ A rigorous structure was outlined for us to follow concerning deliverables but t
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/margate/img/margate_seafront_dreamland_arlington.jpg' alt="Margate Seafront with Dreamland and Arlington" />
-  <p class="img-footer">A symbol for modern Margate; the closed Dreamland centre overshadowed by an unmaterialised modernist vision, surrounded by scaffolding.</p>
+  <img class="hor" src='/folios/torch/img/torch_one_snake.jpg' alt="Early 'Snake' torch concept" />
+  <p class="img-footer">: An early design concept for a tubular light which holds a position decided by the user.</p>
 </div>
 
 <h5>At the beginning of the project I was of two minds, on the one hand this task was to design within a typology that already exists, and necessitated finding a problem within that typology rather than starting with an identified problem and finding the most appropriate solution. In other words, it is what some would call ‘traditional product design’, object-orientated and consumer lead.
@@ -50,8 +50,8 @@ In addition, it offered an opportunity to identify a real problem and conceptual
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/margate/img/margate_2017_research.jpg' alt="Day one of Margate Feild Research" />
-  <p class="img-footer">Day one of our group trip to Margate conducting research. Even Arlington can look good with strategic lense flares.</p>
+  <img class="hor" src='/folios/torch/img/torch_two_bookshelf.jpg' alt="Third year bookshelf design" />
+  <p class="img-footer">A bookshelf I designed in third year of high school. The SQA is very technically minded and ensures we start early.</p>
 </div>
 
 <h5>My final design solution looked to provide an all-in-one device for survival situations where a torch may be all that the user has left, for example a vehicle crash or sudden natural disaster in a remote region.
@@ -62,13 +62,8 @@ My final design functioned primarily as a torch with functionality built in to g
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/margate/img/100.jpg' alt="Margate Presentation Boad One" />
-  <p class="img-footer">First Final Presentation Board</p>
-</div>
-
-<div class="img-box text-center">
-  <img class="hor" src='/folios/margate/img/105.jpg' alt="Margate Presentation Boad Two" />
-  <p class="img-footer">Second Final Presentation Board</p>
+  <img class="hor" src='/folios/torch/img/torch_three_concept.jpg' alt="Final presentation board" />
+  <p class="img-footer">Final Presentation Board</p>
 </div>
 
 <h5>My design solution was a conceptual ferry service operating an ‘Art Tour’ around Margate, connecting visitors to key areas of cultural and artistic significance around the east coast.
@@ -77,10 +72,10 @@ The core of this idea is to place Margate at the centre of a broader artistic co
 
 Margate has a rising art scene as personified by the greatly successful Turner Contemporary gallery but is somewhat stunted by its remote location and lack of other attractions. By offering figurative and literal links to other such locations, a coherent experience can be created centred around Margate with connections to London and Dover to entice tourists.
 </h5>
-
-<div class="pen-embed">
-  <p data-height="500" data-theme-id="light" data-slug-hash="rweeeW" data-default-tab="result" data-user="Oddert" data-embed-version="2" data-pen-title="Margate Art Tour Time Demonstration" class="codepen">See the Pen <a href="https://codepen.io/Oddert/pen/rweeeW/">Margate Art Tour Time Demonstration</a> by Robin Veitch (<a href="https://codepen.io/Oddert">@Oddert</a>) on <a href="https://codepen.io">CodePen</a>.</p>
-  <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+  
+<div class="img-box text-center">
+  <img class="hor" src='/folios/torch/img/torch_four_patch.jpg' alt="Mid way patch concept" />
+  <p class="img-footer">Second Final Presentation Board</p>
 </div>
 
 <h5>Reflecting back on the project I was pleased overall with the outcome, particularly with the iterative development of the products functionality and form, however the end solution was a bit ‘Jekyll-Hyde’ in that several typologies had been hybridised rather than their concepts synthesised. Rather than create a combination of a survival knife and torch’s functionality, I had simply designed a survival knife with a light on the front. In addition, questions could be asked about the efficiency of the thermos-electric generator and the specification of the LED’s used.
@@ -111,5 +106,3 @@ I may revisit this concept in the future and take these considerations into acco
 
 </body>
 </html>
-Contact GitHub API Training Shop Blog About
-© 2017 GitHub, Inc. Terms Privacy Security Status Help
