--- a/folios/folio_torch.html
+++ b/folios/folio_torch.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class='header-img-container torch'>
-  <img src='/folios/torch/img/torch_banner.jpg' class="header-img" alt='Margate Page One' /></div>
+  <img src='http://oddert.github.io/folios/torch/img/175.jpg' class="header-img" alt='Margate Page One' /></div>
 
 <a href='/pdfs/Torch_Project.pdf' target="_blank" class="a-pdf">
 
