--- a/folios/folio_torch.html
+++ b/folios/folio_torch.html
@@ -40,11 +40,12 @@ A rigorous structure was outlined for us to follow concerning deliverables but t
 
 <div class="img-box text-center">
   <img class="hor" src='/folios/torch/img/torch_one_snake.jpg' alt="Early 'Snake' torch concept" />
-  <p class="img-footer">: An early design concept for a tubular light which holds a position decided by the user.</p>
+  <p class="img-footer">An early design concept for a tubular light which holds a position decided by the user.</p>
 </div>
 
 <h5>At the beginning of the project I was of two minds, on the one hand this task was to design within a typology that already exists, and necessitated finding a problem within that typology rather than starting with an identified problem and finding the most appropriate solution. In other words, it is what some would call ‘traditional product design’, object-orientated and consumer lead.
-On the other hand, the emphasis on technical competency and refinement of function was very similar to what I was familiar with from the SQA’s preferred methods. This was a chance to really push and refine particular skill sets.
+
+  On the other hand, the emphasis on technical competency and refinement of function was very similar to what I was familiar with from the SQA’s preferred methods. This was a chance to really push and refine particular skill sets.
 
 In addition, it offered an opportunity to identify a real problem and conceptualise a design solution which could, if actualised, help people in a genuine way.
 </h5>
@@ -65,13 +66,6 @@ My final design functioned primarily as a torch with functionality built in to g
   <img class="hor" src='/folios/torch/img/torch_three_concept.jpg' alt="Final presentation board" />
   <p class="img-footer">Final Presentation Board</p>
 </div>
-
-<h5>My design solution was a conceptual ferry service operating an ‘Art Tour’ around Margate, connecting visitors to key areas of cultural and artistic significance around the east coast.
-
-The core of this idea is to place Margate at the centre of a broader artistic context and culture.
-
-Margate has a rising art scene as personified by the greatly successful Turner Contemporary gallery but is somewhat stunted by its remote location and lack of other attractions. By offering figurative and literal links to other such locations, a coherent experience can be created centred around Margate with connections to London and Dover to entice tourists.
-</h5>
   
 <div class="img-box text-center">
   <img class="hor" src='/folios/torch/img/torch_four_patch.jpg' alt="Mid way patch concept" />
