--- a/folios/folio_torch.html
+++ b/folios/folio_torch.html
@@ -72,7 +72,10 @@ My final design functioned primarily as a torch with functionality built in to g
   <p class="img-footer">Second Final Presentation Board</p>
 </div>
 
-<h5>Reflecting back on the project I was pleased overall with the outcome, particularly with the iterative development of the products functionality and form, however the end solution was a bit ‘Jekyll-Hyde’ in that several typologies had been hybridised rather than their concepts synthesised. Rather than create a combination of a survival knife and torch’s functionality, I had simply designed a survival knife with a light on the front. In addition, questions could be asked about the efficiency of the thermos-electric generator and the specification of the LED’s used.
+<h5>Reflecting back on the project I was pleased overall with the outcome, particularly with the iterative development of the products functionality and form, however the end solution was a bit ‘Jekyll-Hyde’ in that several typologies had been hybridised rather than their concepts synthesised. 
+  
+  Rather than create a combination of a survival knife and torch’s functionality, I had simply designed a survival knife with a light on the front. In addition, questions could be asked about the efficiency of the thermos-electric generator and the specification of the LED’s used.
+  
 I may revisit this concept in the future and take these considerations into account but over-all, the project was a good exercise and extension of the basic skills involved in physical product design.
 </h5>
 
