--- a/folios/folio_torch.html
+++ b/folios/folio_torch.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class='header-img-container torch'>
+  <div class='header-img-container torch' style='background-image: url(/folios/torch/img/175.jpg)'>
   <img src='http://oddert.github.io/folios/torch/img/175.jpg' class="header-img" alt='Margate Page One' /></div>
 
 <a href='/pdfs/Torch_Project.pdf' target="_blank" class="a-pdf">
