--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
-
+  
+  <link rel="icon" type="image/png" href="/faveicon.jpg">
   
 </head>
 
