--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <link rel="stylesheet" href="css/style.css">
   
-  <link rel="icon" type="image/png" href="/faveicon.jpg">
+  <link rel="icon" type="image/png" href="/faveicon.png">
   
 </head>
 
