--- a/folios/folio_torch.html
+++ b/folios/folio_torch.html
@@ -9,7 +9,8 @@
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="/css/style_folio.css">
-
+  
+  <link rel="icon" type="image/png" href="/faveicon.png">
 
 </head>
 
