--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     </div>
   </div>
   <div class="row center-block marg1">
-    <a href='/pdfs/station_lighting.pdf' target='blank'><div class="col-xs-5 img-thumbnail">
+    <a href='/pdfs/station_lighting.pdf' target='_blank'><div class="col-xs-5 img-thumbnail">
       <img src="https://lh3.googleusercontent.com/KkY4GSL2XUm9wKhRQvYHJMesgVb2sIYD0-XfQqeuRV7Wf_kLyVRH0Vwu2rNUAD32zY-fdfXEQd3XTtu0x57W1JHndh0ctQXboX3xHyfgzX7zcIK8HBHz7mmdmtKAvuoPJep9n5Va6J7rSesU7KDZQB71_wQKs_5tUA02TGDF3rhpQy_PQYK__oQs5UH3zEO-VOlXwaabTTNXQoALwQBAhkKemIOYR05Z6MwMcw_C5rFJnA9zifH7nS09tT0jM1YnKmdrBQBTPFe79AzRrbM-z95u7_9uNTDvpNW4ddIYrnVk7hvPymUvCQDk0dRMgDdRCd4XYcHKCuSqw2IGbW_Zk-QK81LdHOY6BdabmEF4Gb3foGZ1e4FVqGytVf1SK57bGzqCbpEyKE3yy4H39bHGHPD4qubnmftbhtxFZ6BFPAPR4KJNVU5OYhQj1sZnRDCHMPhCu3TI6QZM3SCFVGdapXZr083H3lZ1-_hAf9FhW5cG_Jv9mJCQbu00mYPWgQSeUDwNzyqx6yr_mPOPhg70m24kvXhKfYOZ71WaKYlUFFuGNctxlh_RPRLHrUwxf5GcTjjaJpDgCvxMtmwnR-F-zW1nR_fSP46TAX0siQWqSNc3GPDPZQ=w720-h516-no"
         class="img-responsive iconhover" alt="Station Lighting Design">
       </div></a>
-    <a href='/folios/folio_torch.html' target='blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
+    <a href='/folios/folio_torch.html' target='_blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
       <img src="https://lh3.googleusercontent.com/owIsDU57dgJAR8L-Jy-3g-TtnoTaWOyVRUhJIGfAYqmFXf_jh5UKxT1yjixnleO5ZJZk60UjrPLEisAReL2rUBYkYxDJo2ZDrQH_MfbYgIODy1xN4xOGlPFP1sSps-o-JL_Fwvj2a9bwOoH7_WBMWu6k7ysKfk2fOKxKMiWBxI86k4F3Wms2sPyUKv3Qu6fM9OcBzW0bBxCASh1JZYX8n_SN4nEuvT2MsMej9A0__vRa3nzdl12UkoDa8GuXCCHoWJ939iEfK-_TghU3Rnrxqu0xxWXRIXX1zZKQ-vROqNZGgkivf0NeGTMda_2p62zRl1_kpWag551Se_CCAv3MvnPTVshEJE_nbnz8WmAOSI0xEdjEYuIQfTKd4FkjxenBunGtFUe2sgH5w5NtkUK5GI8We6iqIimjcamijIiivezGVKMBcUieCoX3EiU3_cLmGcb7mgdjI0XTL8BJz668oVBbjJsnBtvnvMKXZP8mmhmmGEzHZX0Ii-1LTwEo98iuNdvOE5NUmSiTfkJWi8FuATbnZIqLqPXBO_2TWpwOH8YZeWnDHnQJadhTLQ493Oee4ukUcjMSbMEn4Wn2smdv_4co97RyN-26BQjOucMIjTyPoXP1DQ=w2216-h1566-no"
         class="img-responsive iconhover" alt="Emergency Torch Project">
       </div></a>
@@ -80,10 +80,10 @@
   </div>
 
   <div class="row center-block marg1">
-    <a href='/pdfs/victoronox.pdf' target='blank'><div class="col-xs-5 img-thumbnail">
+    <a href='/pdfs/victoronox.pdf' target='_blank'><div class="col-xs-5 img-thumbnail">
       <img src="https://s-media-cache-ak0.pinimg.com/564x/85/8d/3d/858d3dbd4589646a2c35c2fe711e26a9.jpg" class="img-responsive iconhover" alt="Victoronox">
       </div></a>
-    <a href='/pdfs/ccv.pdf' target='blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
+    <a href='/pdfs/ccv.pdf' target='_blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
       <img src="https://s-media-cache-ak0.pinimg.com/564x/e3/b6/84/e3b68466d6757bf1a9dc0966ecf9ccf7.jpg" class="img-responsive iconhover" alt="CCV Interactive Display Table">
     </div></a>
   </div>
@@ -101,7 +101,7 @@
     <div class="col-xs-5 img-thumbnail">
       <img src="https://lh3.googleusercontent.com/y1HKa7BoUQ1rV3GPeBc2GMLJcU3rcMlxUHAM2_-q1jFhQxA7O26u-4bqhAOJBJH5g_uX-oaeBuCRBOT6p730E008ErBEO2GKwCMNR0oSmHlTQ2W-pydnzcnQ9ZROwU_cyQ5ONQ8u__AIjVfTS8t4iWyPv_8AjSDI2xEPMDkPwn5xffjrrS3U45sUJesx-VyfCcWMOEIrltxF9yfXZirXn_meBJwH_gC7SClphEZ2rPzwMRnHLzQ-tZ-y2vYNz-9BozfYyVgyHbDNuHw1ZbGNeMp3mlj3ySHEL9-XHhEOC4__XJq_Pu2uKPkp5Y4LPujq4-mopCjmcKkwEgOMeR8FdalbqHj09dRN1CAtQHLlFCsghN3B2BTrWjEMhvjTJ0lfvM7SxJlVambBusRVvmtMtPAZDBj_97Ok0mmlqs8WahdBdD_HIfULNvE72LGx0FOllFPiZJ-2i93ukHj53DoVTGR63aPDH_DFoNbw77UXE6t7gH6JX2SQLK8uPq_Qp6Otf5QF8LQMwc4SqbsbV3ccOlp25LXqMnQauUXAjyQuBSBRrsTKhlL13MQKTtaocx_Jiztp_112ZiPNWzVWwyIS_76gK31z0y-sJaDFg6HJZeJtXAb8rPuIgw=s720-no" class="img-responsive iconhover" alt="Blank">
     </div>
-    <a href='/folios/folio_margate.html' target='blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
+    <a href='/folios/folio_margate.html' target='_blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
       <img src="https://lh3.googleusercontent.com/cOv0xrI8J3G5R49QDWUr3IN6zQtpD0kXH1-piO-D9WEGqOE9W-AvuoZHEmmrmuhYKHo7WSaLXaZh5LrcoATP-3liGupTU3HphN9vLwkFXJ3cAP6QRBSdSJmEKLrT5avye4v0VCazocE9EMYroWwIcFYoLIzmJ4Ex6XlB7UwJljC7FXaxdfOB8S79yCAY_wR4PysiJF1WPpHfsxi5l9Af1kxWBajbAXo5BgrOIzOLb8rb-OTanbSEP2ulpsAIW7wkbyXB03c894MUHlUIwbYejnWewbnJ8ykVbuFnzb14pQEchV-MFge49lZke88HW_DDK2z5RlZvMyF6nbcOAK6Imck93NbcfP0r6vbdRxgtnfk7BEc6kNpHFqYIOBsjDQelC2tBcL7yrAdCZM3c0tYEEb3wcbG3cVdrE2Gn7N2DkvpfOE2Lw09shmUCrr7u6YbLzKOuPHwDT9g3gZO7c0gRmINSJ00xftcsxCyo3O3WXvqFgh2zRQqO0C1J3nbQrRnKOkbdFzyKdCeE47qhIXqpPs-k4r_mo9u4qmDWQ6FRR3J_GicxsEQ9VBRtsAYvIEFkC-BjFycNluletmRNWD4TJfXpxWvnDVYYvPfLJhp3GhB6yEMoSTYSAg=w2218-h1566-no" class="img-responsive iconhover" alt="The Margate Art Tour">
       </div></a>
   </div>
