--- a/folios/folio_fusion_poster.html
+++ b/folios/folio_fusion_poster.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <div class='header-img-container torch' style='background-image: url(/folios/fusion/img/fusion_banner.jpg)'>
-  <img src='http://oddert.github.io/folios/torch/img/175.jpg' class="header-img" alt='Fusion Banner Image' /></div>
+  <div class='header-img-container torch' style='background-image: url(/folios/fusion/img/fusion_banner.png)'>
+  <img src='http://oddert.github.io/folios/fusion/img/fusion_banner.png' class="header-img" alt='Fusion Banner Image' /></div>
 
 <a href='/pdfs/Torch_Project.pdf' target="_blank" class="a-pdf">
 
@@ -42,7 +42,7 @@ This is something I very much agree with and so was excited to participate in th
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/fusion/img/fusion_one_lockheed_martin.jpg' alt="Lockheed Martin Landing" />
+  <img class="hor" src='/folios/fusion/img/fusion_one_lockheed_martin.JPG' alt="Lockheed Martin Landing" />
   <p class="img-footer">The landing page for Lockheed Martin's fusion project.</p>
 </div>
 
@@ -58,7 +58,7 @@ This is something I very much agree with and so was excited to participate in th
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/fusion/img/fusion_banner.jpg' alt="Final presentation board" />
+  <img class="hor" src='/folios/fusion/img/fusion_banner.png' alt="Final presentation board" />
   <p class="img-footer">Final Poster Design</p>
 </div>
 
