--- a/folios/folio_fusion_poster.html
+++ b/folios/folio_fusion_poster.html
@@ -30,7 +30,7 @@
 
 </a>
 
-<h1 class="text-center">Nat Five Research Project Prototype</h1>
+<h1 class="text-center">National Five Research Project Prototype</h1>
 
 <h4 class="text-center">In fifth year high school I was asked to design an archetype for a new Nat 5 project. </h4>
 
