--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
   </div>
 
   <div class="row center-block marg1">
-    <div class="col-xs-5 img-thumbnail">
+    <a href='/folios/folio_fusion.html'><div class="col-xs-5 img-thumbnail">
       <img src="https://s-media-cache-ak0.pinimg.com/564x/5f/ba/f6/5fbaf68c45e4e5390ec1aa38e8c23ffb.jpg" class="img-responsive iconhover" alt="Nuclea Fussion Poster">
-    </div>
+      </div></a>
     <div class="col-xs-5 col-xs-offset-2 img-thumbnail">
       <img src="https://s-media-cache-ak0.pinimg.com/564x/ad/05/5e/ad055ef9f9baf6763a61ebeff10bce92.jpg" class="img-responsive iconhover" alt="Graphic Design Leaflet">
     </div>
