--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
 
   <div class="row center-block marg1">
-    <a href='/folios/folio_fusion.html' target='_blank'><div class="col-xs-5 img-thumbnail">
+    <a href='/folios/folio_fusion_poster.html' target='_blank'><div class="col-xs-5 img-thumbnail">
       <img src="https://s-media-cache-ak0.pinimg.com/564x/5f/ba/f6/5fbaf68c45e4e5390ec1aa38e8c23ffb.jpg" class="img-responsive iconhover" alt="Nuclear Fusion Poster">
       </div></a>
     <div class="col-xs-5 col-xs-offset-2 img-thumbnail">
