--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
       </div></a>
   </div>
   
+  <div class="row center-block marg1">
+    <a href='/folios/arkwrite/img/arkwrite_banner.jpg' target='_blank'><div class="col-xs-5 img-thumbnail">
+      <img src="/folios/arkwrite/img/arkwrite_banner.jpg" class="img-responsive iconhover" alt="Arkwrite Stationary Holder">
+      </div></a>
+    <a href='/folios/folio_margate.html' target='_blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
+      <img src="https://lh3.googleusercontent.com/cOv0xrI8J3G5R49QDWUr3IN6zQtpD0kXH1-piO-D9WEGqOE9W-AvuoZHEmmrmuhYKHo7WSaLXaZh5LrcoATP-3liGupTU3HphN9vLwkFXJ3cAP6QRBSdSJmEKLrT5avye4v0VCazocE9EMYroWwIcFYoLIzmJ4Ex6XlB7UwJljC7FXaxdfOB8S79yCAY_wR4PysiJF1WPpHfsxi5l9Af1kxWBajbAXo5BgrOIzOLb8rb-OTanbSEP2ulpsAIW7wkbyXB03c894MUHlUIwbYejnWewbnJ8ykVbuFnzb14pQEchV-MFge49lZke88HW_DDK2z5RlZvMyF6nbcOAK6Imck93NbcfP0r6vbdRxgtnfk7BEc6kNpHFqYIOBsjDQelC2tBcL7yrAdCZM3c0tYEEb3wcbG3cVdrE2Gn7N2DkvpfOE2Lw09shmUCrr7u6YbLzKOuPHwDT9g3gZO7c0gRmINSJ00xftcsxCyo3O3WXvqFgh2zRQqO0C1J3nbQrRnKOkbdFzyKdCeE47qhIXqpPs-k4r_mo9u4qmDWQ6FRR3J_GicxsEQ9VBRtsAYvIEFkC-BjFycNluletmRNWD4TJfXpxWvnDVYYvPfLJhp3GhB6yEMoSTYSAg=w2218-h1566-no" class="img-responsive iconhover" alt="The Margate Art Tour">
+      </div></a>
+  </div>
+  
 </div>
 
 <div class="container-fluid" id="page3">
