--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   </div>
   
   <div class="row center-block marg1">
-    <a href='/folios/arkwrite/img/arkwrite_banner.jpg' target='_blank'><div class="col-xs-5 img-thumbnail">
+    <a href='/pdfs/arkwrite.pdf' target='_blank'><div class="col-xs-5 img-thumbnail">
       <img src="/folios/arkwrite/img/arkwrite_banner.jpg" class="img-responsive iconhover" alt="Arkwrite Stationary Holder">
       </div></a>
     <a href='/pdfs/higher_assignment.pdf' target='_blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
