--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -77,7 +77,7 @@
 <h5>For the full technical package please see the full folio PDF.
 </h5>
 
-  <div class="inventor"><iframe src="https://myhub.autodesk360.com/ue2b6fbda/shares/public/SH7f1edQT22b515c761e044efc47eca3f5d0?mode=embed" width="800" height="600" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></div>
+  <div class="inventor" style="border: 1px solid red"><iframe src="https://myhub.autodesk360.com/ue2b6fbda/shares/public/SH7f1edQT22b515c761e044efc47eca3f5d0?mode=embed" width="800" height="600" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></div>
   
 <div class="footer">
   <p class="footer-name text-center"><a href='http://oddert.github.io/#page2'>By Robert Veitch</p></a>
