--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <div class='header-img-container thematic' style='background-image: url(/folios/thematic/img/thematic_banner.jpg)'>
-  <img src='http://oddert.github.io/folios/thematic/img/thematic_banner.jpg' class="header-img" alt='Thematic Banner Image' /></div>
+  <div class='header-img-container thematic' style='background-image: url(/folios/thematic/img/thematic_banner.png)'>
+  <img src='http://oddert.github.io/folios/thematic/img/thematic_banner.png' class="header-img" alt='Thematic Banner Image' /></div>
 
 <a href='/pdfs/thematic.pdf' target="_blank" class="a-pdf">
 
