--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -34,12 +34,13 @@
 
 <h4 class="text-center">A full thematic portfolio for 50% of Higher Graphic Communication Score.</h4>
 
-<h5>In sixth year, I crashed Higher Graphic Communication to sharpen my technical competency and visual presentation capability. 50% of this final mark is taken form a thematic portfolio produced throughout the year, based on a selected consumer product.
+<h5>
+  In sixth year, I crashed Higher Graphic Communication to sharpen my technical competency and visual presentation capability. 50% of this final mark is taken form a thematic portfolio produced throughout the year, based on a selected consumer product.
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/fusion/img/fusion_one_lockheed_martin.JPG' alt="Lockheed Martin Landing" />
-  <p class="img-footer">The assembled torch</p>
+  <img class="hor" src='/folios/thematic/img/thematic_one_finished_torch.bmp' alt="Rendered Torch Model" />
+  <p class="img-footer">A render of the assembled torch.</p>
 </div>
 
 <div class="img-box text-center">
