--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -44,12 +44,15 @@
 </div>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/fusion/img/fusion_one_lockheed_martin.JPG' alt="Lockheed Martin Landing" />
-  <p class="img-footer">An exploded isometric</p>
+  <img class="hor" src='/folios/thematic/img/thematic_two_exploded.JPG' alt="Torch exploded view" />
+  <p class="img-footer">An exploded view of the torch</p>
 </div>
 
-<h5>The thematic is, in essence, a full visual display portfolio for our chosen product where we act as though the product is of our own design and we must now visualise and communicate it to a client, manufacturer and customer.
+<h5>
+  The thematic is, in essence, a full visual display portfolio for our chosen product where we act as though the product is of our own design and we must now visualise and communicate it to a client, manufacturer and customer.
 </h5>
+  
+  <!-- anchor -->
 
 <div class="img-box text-center">
   <img class="hor" src='/folios/fusion/img/fusion_two_icons.png' alt="Icon Development" />
