--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -54,12 +54,8 @@
   
   <!-- anchor -->
 
-<div class="img-box text-center">
-  <img class="hor" src='/folios/fusion/img/fusion_two_icons.png' alt="Icon Development" />
-  <p class="img-footer">The orriginal torch</p>
-</div>
-
-<h5>This folio is comprised of three components:
+<h5>
+  This folio is comprised of three components:
 
   1) A fully dimensioned technical package including parts sheets.
 
@@ -69,9 +65,11 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/fusion/img/fusion_banner.png' alt="Final presentation board" />
+  <img class="hor" src='/folios/thematic/img/thematic_three_technical.png' alt="A dimensioned parts sheet" />
   <p class="img-footer">Fully dimensioned part sheet</p>
 </div>
+  
+  <!-- anchor -->
 
 <div class="img-box text-center">
   <img class="hor" src='/folios/fusion/img/fusion_banner.png' alt="Final presentation board" />
