--- a/folios/folio_thematic.html
+++ b/folios/folio_thematic.html
@@ -51,8 +51,6 @@
 <h5>
   The thematic is, in essence, a full visual display portfolio for our chosen product where we act as though the product is of our own design and we must now visualise and communicate it to a client, manufacturer and customer.
 </h5>
-  
-  <!-- anchor -->
 
 <h5>
   This folio is comprised of three components:
@@ -68,15 +66,19 @@
   <img class="hor" src='/folios/thematic/img/thematic_three_technical.png' alt="A dimensioned parts sheet" />
   <p class="img-footer">Fully dimensioned part sheet</p>
 </div>
-  
-  <!-- anchor -->
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/fusion/img/fusion_banner.png' alt="Final presentation board" />
+  <img class="hor" src='/folios/thematic/img/thematic_four_leaflet.jpg' alt="Faux leaflet" />
   <p class="img-footer">The leaflet showing faux-company details</p>
 </div>
+  
+<div class="img-box text-center">
+  <img class="hor" src='/folios/thematic/img/thematic_five_poster.jpg' alt="Faux poster" />
+  <p class="img-footer">One of the posters produced.</p>
+</div>
 
-<h5>For the full technical package please see the full folio PDF.
+<h5>
+  For the full technical package please see the full folio PDF.
 </h5>
 
   <iframe src="https://myhub.autodesk360.com/ue2b6fbda/shares/public/SH7f1edQT22b515c761e044efc47eca3f5d0?mode=embed" width="800" height="600" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
