--- a/folios/folio_arkwright.html
+++ b/folios/folio_arkwright.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Robert Veitch Emergancy Torch Project</title>
+  <title>Robert Veitch Arkwright 'Hold, Store, Display' Project</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One|Montserrat" rel="stylesheet">
 
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-  <div class='header-img-container torch' style='background-image: url(/folios/torch/img/175.jpg)'>
-  <img src='http://oddert.github.io/folios/torch/img/175.jpg' class="header-img" alt='Margate Page One' /></div>
+  <div class='header-img-container torch' style='background-image: url(/folios/arkwright/img/arkwright_one_logo.jpg)'>
+  <img src='http://oddert.github.io/folios/arkwright/img/arkwright_one_logo.jpg' class="header-img" alt='Margate Page One' /></div>
 
-<a href='/pdfs/Torch_Project.pdf' target="_blank" class="a-pdf">
+<a href='/pdfs/arkwright.pdf' target="_blank" class="a-pdf">
 
   <div class="pdf-link text-center">
     <i class="fa fa-2x fa-file-pdf-o"></i>
@@ -30,54 +30,49 @@
 
 </a>
 
-<h1 class="text-center">The Emergancy Torch Project</h1>
+<h1 class="text-center">Hold, Store, Display Project</h1>
 
-<h4 class="text-center">Unit three of the course dealt primarily with design from a user perspective, the torch project was an exercise in applying the design process to an every-day object with particular regard to emotional and functional considerations.</h4>
+<h4 class="text-center">
+  A project to design a new method of storing and displaying an item for the Arkwright Scholarship program.
+</h4>
+  
+  <!-- anchor -->
 
-<h5>This project was introduced as being much more focused on process rather than conceptual understanding of manufacture which unit two was primarily concerned with. The task was to design a torch in one of four categories with my group being assigned ‘emergency torch’.
+<h5>
+  As my year group was starting fifth year of high school, Eastwood was given the opportunity to engage fourth year students in a scholarship program.
 
-A rigorous structure was outlined for us to follow concerning deliverables but the interpretation, i.e. <i>what is meant by ‘emergency’?</i> , target market, use of theoretical technology was entirely up to us.
+  At the time, there existed the possibility of myself and the other new fifth years also being permitted to take part. Later this idea was rejected, but whilst waiting, I made some progress on the brief given as part of the application process.
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/torch/img/torch_one_snake.jpg' alt="Early 'Snake' torch concept" />
-  <p class="img-footer">An early design concept for a tubular light which holds a position decided by the user.</p>
+  <img class="hor" src='/folios/arkwright/img/arkwright_one_logo.jpg' alt="The arkwright logo" />
+  <p class="img-footer">The Arkwright Logo.</p>
 </div>
 
-<h5>At the beginning of the project I was of two minds, on the one hand this task was to design within a typology that already exists, and necessitated finding a problem within that typology rather than starting with an identified problem and finding the most appropriate solution. In other words, it is what some would call ‘traditional product design’, object-orientated and consumer lead.
-
-  On the other hand, the emphasis on technical competency and refinement of function was very similar to what I was familiar with from the SQA’s preferred methods. This was a chance to really push and refine particular skill sets.
-
-In addition, it offered an opportunity to identify a real problem and conceptualise a design solution which could, if actualised, help people in a genuine way.
+<h5>
+  The brief was very simple, intended for interpretation as much as deliverable outcome, to design an object, no more than 1.5 x 1.5 meters to hold and/or store and/or display another object.
+  
+  The only other requirement was that a working prototype, or at least a proof-of-concept had to be manufactured and documented.
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/torch/img/torch_two_bookshelf.jpg' alt="Third year bookshelf design" />
-  <p class="img-footer">A bookshelf I designed in third year of high school. The SQA is very technically minded and ensures we start early.</p>
+  <img class="hor" src='/folios/arkwright/img/arkwright_two_DI2.png' alt="Design Idea Two" />
+  <p class="img-footer">Design Idea Two uses a micro-suction-cup material to hold a range of flat-backed items while idea one utilises a shape-memory polymer to be fully flexible in use (pun intended).</p>
 </div>
 
-<h5>My final design solution looked to provide an all-in-one device for survival situations where a torch may be all that the user has left, for example a vehicle crash or sudden natural disaster in a remote region.
-
-Through research I identified four essential resources to have in such situations as being: Ability to start a fire, A survival knife or basic tooling, Energy generation (if any other electronics survived) and, by extension, light.
-
-My final design functioned primarily as a torch with functionality built in to generate thermos-electric power and start fires using solid-state functionality.
+<h5>
+  At the time, this was for me a wonderful chance to apply some new material knowledge and to express and actualise some ongoing ideas which were relevant to my work at the time. Specifically, it was at this time that I was becoming interested in the meaningful impact of product design and moving from a mode of ‘design-for design’s-sake’ and designing products to make a 50th percentile middle class suburban person’s life more comfortable.
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/torch/img/torch_three_concept.jpg' alt="Final presentation board" />
-  <p class="img-footer">Final Presentation Board</p>
-</div>
-  
-<div class="img-box text-center">
-  <img class="hor" src='/folios/torch/img/torch_four_patch.jpg' alt="Mid way patch concept" />
-  <p class="img-footer">Second Final Presentation Board</p>
+  <img class="hor" src='/folios/arkwright/img/arkwright_three_DI3.png' alt="Design Idea Three" />
+  <p class="img-footer">Daruma dolls originate in Japan and are used to remind oneself of a goal to be achieved at some point in the future. One of the doll’s pupil-less eyes is painted to represent the doll always keeping one eye on you to make sure you stay true to the goal. Once you have achieved the goal the second eye is painted and the doll becomes a reminder of the journey.</p>
 </div>
 
-<h5>Reflecting back on the project I was pleased overall with the outcome, particularly with the iterative development of the products functionality and form, however the end solution was a bit ‘Jekyll-Hyde’ in that several typologies had been hybridised rather than their concepts synthesised. 
+<h5>
+  I tried to inject some of this thinking into the ideas by making four of them (designs 1, 2, 4 and 5) adaptable and/or modular, making one (design 3) orientated towards personal reflection and individual-base and one designed to be aesthetically contemporary but aimed at lower cost markets.
   
-  Rather than create a combination of a survival knife and torch’s functionality, I had simply designed a survival knife with a light on the front. In addition, questions could be asked about the efficiency of the thermos-electric generator and the specification of the LED’s used.
-  
-I may revisit this concept in the future and take these considerations into account but over-all, the project was a good exercise and extension of the basic skills involved in physical product design.
+  I was in the mid development phase for one other the three ideas I wanted to take forward when we were informed that the scholarship was cancelled. I developed idea five through to a prototype and may pick up on some of the others, specifically ideas one, three and five at some point as I believe there is potential in them for a unique design solution.
 </h5>
 
 <div class="footer">
