--- a/index.html
+++ b/index.html
@@ -112,12 +112,16 @@
   </div>
   
   <div class="row center-block marg1">
-    <a href='/pdfs/arkwrite.pdf' target='_blank'><div class="col-xs-5 img-thumbnail">
-      <img src="/folios/arkwrite/img/arkwrite_banner.jpg" class="img-responsive iconhover" alt="Arkwrite Stationary Holder">
-      </div></a>
-    <a href='/pdfs/higher_assignment.pdf' target='_blank'><div class="col-xs-5 col-xs-offset-2 img-thumbnail">
-      <img src="/folios/higher_assignment/img/higher_assignment_banner.jpg" class="img-responsive iconhover" alt="Higher Design Assignment">
-      </div></a>
+    <a href='/folios/folio_arkwright.html' target='_blank'>
+      <div class="col-xs-5 img-thumbnail">
+        <img src="/folios/arkwrite/img/arkwrite_banner.jpg" class="img-responsive iconhover" alt="Arkwrite Stationary Holder">
+      </div>
+    </a>
+    <a href='/pdfs/higher_assignment.pdf' target='_blank'>
+      <div class="col-xs-5 col-xs-offset-2 img-thumbnail">
+        <img src="/folios/higher_assignment/img/higher_assignment_banner.jpg" class="img-responsive iconhover" alt="Higher Design Assignment">
+      </div>
+    </a>
   </div>
   
 </div>
